--- a/style.css
+++ b/style.css
@@ -71,3 +71,20 @@ body{
     padding: 16px 26px;
     border: 5px;
 }
+
+
+@media (max-width: 848px){
+    .display{
+        width: 80%;
+        padding: 20px;
+    }
+    .display input{
+        border: 0;
+        outline: 0;
+        font-size: 15px;
+    }
+    .btn{
+        padding: 0;
+        font-size: 16px;
+    }
+}
